--- a/src/less/blocks/sale.less
+++ b/src/less/blocks/sale.less
@@ -6,6 +6,18 @@
   &:last-child {
     border-bottom: 1px solid @color-gray;
   }
+
+  @media @tablet {
+    padding: 26px 38px 28px;
+  }
+}
+
+.sale__wrapper {
+  @media @tablet {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 24px;
+  }
 }
 
 .sale__title {
@@ -13,22 +25,39 @@
   color: @color-gray-deep;
   margin-bottom: 12px;
   text-transform: uppercase;
+
+  @media @tablet {
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 0;
+  }
 }
 
 .sale__box {
   display: flex;
   justify-content: space-between;
   margin-bottom: 16px;
+
+  @media @tablet {
+    margin-bottom: 0;
+    gap: 50px;
+  }
 }
 
 .sale__description {
   color: @color-gray-dark;
   line-height: 14px;
   margin: 0;
+
+  @media @tablet {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .sale__button {
   font-size: 16px;
   line-height: 20px;
   padding: 10px;
+  width: 100%;
 }
