--- a/src/less/blocks/sale.less
+++ b/src/less/blocks/sale.less
@@ -10,6 +10,14 @@
   @media @tablet {
     padding: 26px 38px 28px;
   }
+
+  @media @desktop {
+    display: flex;
+    justify-content: space-between;
+    gap: 38px;
+    padding: 15px 0;
+    width: 896px;
+  }
 }
 
 .sale__wrapper {
@@ -17,6 +25,11 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 24px;
+  }
+  @media @desktop {
+    margin-bottom: 0;
+    align-items: center;
+    //flex-shrink: 0;
   }
 }
 
@@ -31,6 +44,10 @@
     line-height: 20px;
     margin-bottom: 0;
   }
+  @media @desktop {
+    width: 325px;
+    //flex-shrink: 0;
+  }
 }
 
 .sale__box {
@@ -41,6 +58,13 @@
   @media @tablet {
     margin-bottom: 0;
     gap: 50px;
+  }
+
+  @media @desktop {
+    gap: 0;
+    align-items: center;
+    width: 285px;
+    //flex-shrink: 0;
   }
 }
 
@@ -59,5 +83,13 @@
   font-size: 16px;
   line-height: 20px;
   padding: 10px;
-  width: 100%;
+
+  @media @tablet {
+    width: 100%;
+  }
+
+  @media @desktop {
+    width: 244px;
+    flex-shrink: 0;
+  }
 }
