Изменение разметки и удаление блока caption

--- a/src/less/blocks/cards.less
+++ b/src/less/blocks/cards.less
@@ -3,7 +3,7 @@
   width: auto;
   max-width: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 24px;
 
   @media @tablet {
     display: flex;
@@ -12,12 +12,13 @@
     gap: 60px;
     max-width: 768px;
     padding: 0 30px;
-    margin: 0 auto;
+    margin: 0 auto 68px;
   }
 
   @media @desktop {
     max-width: 1280px;
     gap: 63px 80px;
+    margin-bottom: 75px;
   }
 }
 
