--- a/src/less/common/mixins.less
+++ b/src/less/common/mixins.less
@@ -18,3 +18,39 @@
     opacity: 0.3;
   }
 }
+
+.with-line() {
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 14px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: @color-green;
+    z-index: -1;
+  }
+
+  @media @tablet {
+    &::after {
+      top: 20px;
+    }
+  }
+}
+
+.title() {
+  .title(24px, 24px);
+  padding: 0 20px 0;
+  background-color: @color-white;
+  display: inline-block;
+  margin-left: -20px;
+
+  @media @tablet {
+    font-size: 36px;
+    line-height: 36px;
+    padding: 0 30px 0;
+    margin-left: -30px;
+  }
+}
