Создание страницы program.html & правка стилей блока header а так же блока cross-sale.less  & sale на разрешении tablet

--- a/src/less/blocks/cross-sale.less
+++ b/src/less/blocks/cross-sale.less
@@ -36,10 +36,12 @@
 
   @media @tablet {
     margin-bottom: 68px;
+    border: 1px solid @color-gray-silver;
   }
 
   @media @desktop {
     margin-bottom: 0;
+    border: none;
   }
 }
 
