--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -4,8 +4,10 @@
   align-items: center;
   justify-content: space-between;
   min-height: 66px;
+  border-bottom: 1px solid @color-gray;
 
   @media @tablet {
+    border: none;
     align-items: flex-end;
     min-height: 78px;
   }
