--- a/src/less/common/variables.less
+++ b/src/less/common/variables.less
@@ -7,6 +7,7 @@
 @color-gray-deep: #222222;
 @color-green: #68b738;
 @color-green-dark: #5eaa2f;
+@color-error: #ff8282;
 
 @font-title: 'Oswald', sans-serif;
 @font-text: Arial, sans-serif;
