--- a/src/less/style.less
+++ b/src/less/style.less
@@ -23,3 +23,5 @@
 @import 'blocks/show-more';
 @import 'blocks/cross-sale';
 @import 'blocks/sale';
+@import 'blocks/form';
+@import 'blocks/program';
