--- a/src/less/blocks/form.less
+++ b/src/less/blocks/form.less
@@ -3,11 +3,16 @@
   align-items: center;
   margin-bottom: 16px;
 
-  &:required::after {
-  }
-
   &:last-child {
     margin-bottom: 24px;
+  }
+
+  @media @tablet {
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 72px;
+    }
   }
 }
 
@@ -15,9 +20,9 @@
   .title(16px, 18px);
   color: @color-gray-dark;
   text-transform: uppercase;
-  padding: 10px 20px;
+  padding: 10px 16px;
   width: 100%;
-  margin-left: 4px;
+  margin-left: 14px;
   border: 1px solid @color-gray-light;
   order: 2;
   outline: none;
@@ -35,12 +40,23 @@
     border-color: @color-error;
   }
 
+  &:required + .form__label {
+    padding-right: 8px;
+  }
+
   &:required + .form__label::after {
     position: absolute;
     content: '*';
     right: 0;
     top: 0;
     color: @color-gray-dark;
+  }
+
+  @media @tablet {
+    font-size: 20px;
+    line-height: 30px;
+    margin-left: 16px;
+    padding: 10px 20px;
   }
 }
 
@@ -50,5 +66,9 @@
   text-transform: uppercase;
   color: @color-gray-dark;
   order: 1;
-  padding-right: 8px;
+
+  @media @tablet {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
