--- a/src/less/blocks/program.less
+++ b/src/less/blocks/program.less
@@ -1,14 +1,32 @@
 .program {
   padding-top: 28px;
+
+  @media @tablet {
+    padding-top: 64px;
+    padding-left: 70px;
+    padding-right: 66px;
+  }
 }
 
 .program__title {
   .title(36px, 36px);
   margin-bottom: 36px;
+
+  @media @tablet {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 54px;
+  }
 }
 
 .program__description {
   .title(14px, 18px);
   text-transform: uppercase;
   margin-bottom: 40px;
+
+  @media @tablet {
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 64px;
+  }
 }
