--- a/src/less/blocks/program.less
+++ b/src/less/blocks/program.less
@@ -6,6 +6,12 @@
     padding-left: 70px;
     padding-right: 66px;
   }
+
+  @media @desktop {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 78px;
+  }
 }
 
 .program__title {
