--- a/src/less/blocks/form.less
+++ b/src/less/blocks/form.less
@@ -1,5 +1,9 @@
 .form__head-inner {
   margin-bottom: 32px;
+
+  @media @tablet {
+    margin-bottom: 72px;
+  }
   @media @desktop {
     width: 570px;
   }
@@ -7,6 +11,10 @@
 
 .form__head-wrapper {
   margin-bottom: 24px;
+
+  @media @tablet {
+    margin-bottom: 72px;
+  }
 
   @media @desktop {
     margin-bottom: 70px;
@@ -22,10 +30,8 @@
   }
 
   @media @tablet {
-    margin-bottom: 20px;
-
-    &:last-child {
-      margin-bottom: 72px;
+    &:not(:last-child) {
+      margin-bottom: 20px;
     }
   }
 }
