Стилизация блока radio for desktop.

--- a/src/less/blocks/radio.less
+++ b/src/less/blocks/radio.less
@@ -10,6 +10,10 @@
     padding: 24px 28px;
     border: 1px solid @color-gray;
   }
+
+  @media @desktop {
+    width: 570px;
+  }
 }
 
 .radio__label {
