--- a/src/less/blocks/form.less
+++ b/src/less/blocks/form.less
@@ -1,14 +1,3 @@
-.form__head-inner {
-  margin-bottom: 32px;
-
-  @media @tablet {
-    margin-bottom: 72px;
-  }
-  @media @desktop {
-    width: 570px;
-  }
-}
-
 .form__head-wrapper {
   margin-bottom: 24px;
 
@@ -17,7 +6,22 @@
   }
 
   @media @desktop {
-    margin-bottom: 70px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 64px;
+  }
+}
+
+.form__head-inner {
+  margin-bottom: 32px;
+
+  @media @tablet {
+    margin-bottom: 72px;
+  }
+
+  @media @desktop {
+    width: 570px;
+    margin-bottom: 0;
   }
 }
 
