--- a/src/less/blocks/radio.less
+++ b/src/less/blocks/radio.less
@@ -5,6 +5,7 @@
   padding-bottom: 10px;
   border-top: 1px solid @color-gray;
   border-bottom: 1px solid @color-gray;
+  margin-bottom: 24px;
 
   @media @tablet {
     padding: 24px 28px;
