--- a/src/less/style.less
+++ b/src/less/style.less
@@ -26,3 +26,5 @@
 @import 'blocks/form';
 @import 'blocks/program';
 @import 'blocks/radio';
+@import 'blocks/contacts';
+@import 'blocks/text-field';
