--- a/src/less/blocks/form.less
+++ b/src/less/blocks/form.less
@@ -1,8 +1,25 @@
+.form__block {
+  @media @desktop {
+    display: flex;
+    margin: 0 auto;
+    padding: 0 30px;
+    width: 1280px;
+  }
+}
+
 .form__head-wrapper {
+  width: 320px;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 20px;
   margin-bottom: 24px;
 
   @media @tablet {
+    padding: 0 30px;
+    width: 768px;
     margin-bottom: 72px;
+    padding-left: 70px;
+    padding-right: 66px;
   }
 
   @media @desktop {
@@ -13,12 +30,6 @@
 }
 
 .form__head-inner {
-  //margin-bottom: 32px;
-
-  @media @tablet {
-    margin-bottom: 72px;
-  }
-
   @media @desktop {
     width: 570px;
     margin-bottom: 0;
