--- a/src/less/blocks/program.less
+++ b/src/less/blocks/program.less
@@ -3,14 +3,19 @@
 
   @media @tablet {
     padding-top: 64px;
-    padding-left: 70px;
-    padding-right: 66px;
   }
 
   @media @desktop {
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 78px;
+  }
+}
+
+.program__box {
+  @media @tablet {
+    padding-left: 70px;
+    padding-right: 66px;
   }
 }
 
