--- a/src/less/blocks/program.less
+++ b/src/less/blocks/program.less
@@ -6,16 +6,21 @@
   }
 
   @media @desktop {
-    padding-left: 30px;
-    padding-right: 30px;
     padding-top: 78px;
   }
 }
 
 .program__box {
+  margin-bottom: 40px;
+
   @media @tablet {
     padding-left: 70px;
     padding-right: 66px;
+    margin-bottom: 64px;
+  }
+
+  @media @desktop {
+    padding: 0 30px;
   }
 }
 
@@ -33,11 +38,9 @@
 .program__description {
   .title(14px, 18px);
   text-transform: uppercase;
-  margin-bottom: 40px;
 
   @media @tablet {
     font-size: 20px;
     line-height: 30px;
-    margin-bottom: 64px;
   }
 }
