--- a/src/less/blocks/radio.less
+++ b/src/less/blocks/radio.less
@@ -13,6 +13,7 @@
 
   @media @desktop {
     width: 570px;
+    margin-bottom: 0;
   }
 }
 
@@ -28,8 +29,9 @@
   }
 
   @media @desktop {
-    width: 1280px;
-    //margin: 0;
+    width: auto;
+    padding: 0;
+    margin: 0;
   }
 }
 
@@ -38,6 +40,9 @@
     padding: 24px 28px;
     border: 1px solid @color-gray;
     margin: 0 40px;
+  }
+  @media @desktop {
+    margin: 0;
   }
 }
 
