Доработка блока contacts tablet

--- a/src/less/blocks/contacts.less
+++ b/src/less/blocks/contacts.less
@@ -1,9 +1,24 @@
 .contacts {
   .with-line();
   margin-bottom: 26px;
+
+  @media @tablet {
+    margin-bottom: 70px;
+  }
+}
+
+.contacts__wrapper {
+  @media @tablet {
+    padding: 0 66px 0 70px;
+  }
 }
 
 .contacts__title {
   width: 221px;
   margin-bottom: 36px;
+
+  @media @tablet {
+    width: auto;
+    margin-bottom: 72px;
+  }
 }
