--- a/src/less/blocks/form.less
+++ b/src/less/blocks/form.less
@@ -1,4 +1,10 @@
 .form__head-wrapper {
+  margin-bottom: 24px;
+
+  @media @tablet {
+    margin-bottom: 80px;
+  }
+
   @media @desktop {
     display: flex;
     gap: 80px;
