--- a/src/less/blocks/text-field.less
+++ b/src/less/blocks/text-field.less
@@ -75,7 +75,7 @@
     font-size: 20px;
     line-height: 30px;
     margin-left: 16px;
-    padding: 10px 20px;
+    padding: 10px 50px 10px 20px;
   }
 }
 
