Стилизация блока comment desktop

--- a/src/less/blocks/comment.less
+++ b/src/less/blocks/comment.less
@@ -11,6 +11,11 @@
     padding: 0 66px 0 70px;
     margin-bottom: 68px;
   }
+
+  @media @desktop {
+    padding: 0 30px;
+    margin-bottom: 72px;
+  }
 }
 
 .comment__title {
@@ -40,6 +45,7 @@
     font-size: 20px;
     line-height: 30px;
     min-height: 172px;
+    padding: 10px 20px;
 
     &::placeholder {
       font-size: 20px;
