--- a/src/less/style.less
+++ b/src/less/style.less
@@ -29,3 +29,5 @@
 @import 'blocks/contacts';
 @import 'blocks/text-field';
 @import 'blocks/comment';
+@import 'blocks/additional';
+@import 'blocks/checkbox';
