Upd checkbox disabled

--- a/src/less/blocks/checkbox.less
+++ b/src/less/blocks/checkbox.less
@@ -40,7 +40,7 @@
 }
 
 .checkbox__input:disabled {
-  & + .checkbox__custom {
+  & ~ .checkbox__label {
     opacity: 0.3;
     pointer-events: none;
   }
