--- a/src/less/blocks/additional.less
+++ b/src/less/blocks/additional.less
@@ -1,10 +1,18 @@
 .additional {
   .with-line();
   line-height: 0;
+
+  @media @tablet {
+    padding: 0 70px;
+  }
 }
 
 .additional__title {
   margin-bottom: 34px;
+
+  @media @tablet {
+    margin-bottom: 56px;
+  }
 }
 
 .additional__list {
@@ -12,11 +20,36 @@
   list-style: none;
   margin-top: 0;
   margin-bottom: 34px;
+
+  @media @tablet {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px 0;
+    margin-bottom: 54px;
+  }
 }
 
 .additional__item {
   &:not(:last-child) {
     margin-bottom: 12px;
+  }
+
+  @media @tablet {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+
+    &:nth-child(odd) {
+      width: 344px;
+    }
+  }
+}
+
+.additional__box {
+  @media @tablet {
+    display: flex;
+    gap: 60px;
+    align-items: center;
   }
 }
 
@@ -25,10 +58,22 @@
   text-transform: uppercase;
   color: @color-white;
   margin-bottom: 20px;
+
+  @media @tablet {
+    font-size: 20px;
+    line-height: 30px;
+    min-width: 282px;
+    padding: 11px 45px;
+    margin-bottom: 0;
+  }
 }
 
-.additional__text {
+.additional__info {
   line-height: 16px;
   display: block;
   text-align: center;
+
+  @media @tablet {
+    font-size: 16px;
+  }
 }
