--- a/src/less/blocks/checkbox.less
+++ b/src/less/blocks/checkbox.less
@@ -19,12 +19,23 @@
   width: 30px;
   height: 30px;
   border: 1px solid @color-gray-silver;
+
+  @media @tablet {
+    height: 40px;
+    width: 40px;
+  }
 }
 
 .checkbox__text {
   .title(16px, 30px);
   text-transform: uppercase;
   margin-left: 18px;
+
+  @media @tablet {
+    font-size: 20px;
+    line-height: 30px;
+    margin-left: 24px;
+  }
 }
 
 .checkbox__mark {
