upd Стилизация декоративных элементов блоков

--- a/src/less/blocks/comment.less
+++ b/src/less/blocks/comment.less
@@ -8,13 +8,21 @@
   }
 
   @media @tablet {
-    padding: 0 66px 0 70px;
     margin-bottom: 68px;
   }
 
   @media @desktop {
-    padding: 0 30px;
     margin-bottom: 72px;
+  }
+}
+
+.comment__wrapper {
+  @media @tablet {
+    padding: 0 66px 0 70px;
+  }
+
+  @media @desktop {
+    padding: 0 30px;
   }
 }
 
