--- a/src/less/blocks/radio.less
+++ b/src/less/blocks/radio.less
@@ -1,12 +1,13 @@
 .radio {
   .title(16px, 18px);
-  display: flex;
+  display: inline-flex;
   align-items: center;
   color: @color-gray-dark;
   text-transform: uppercase;
+  margin: 0 auto 0 0;
 
   &:not(:last-child) {
-    margin-bottom: 12px;
+    margin: 0 auto 12px 0;
   }
 
   @media @tablet {
