--- a/src/less/blocks/radio.less
+++ b/src/less/blocks/radio.less
@@ -17,7 +17,7 @@
 
   @media @desktop {
     &:hover .radio__custom {
-      border-color: @color-gray-dark;
+      border-color: @color-gray-gray;
     }
   }
 }
@@ -27,7 +27,7 @@
   display: block;
   width: 30px;
   height: 30px;
-  border: 1px solid @color-gray-silver;
+  border: 1px solid @color-gray-gray;
   border-radius: 50%;
   margin-right: 16px;
 
