--- a/src/less/blocks/text-field.less
+++ b/src/less/blocks/text-field.less
@@ -37,14 +37,9 @@
   padding: 12px 16px;
   width: 100%;
   margin-left: 14px;
-  border: 1px solid @color-gray-light;
+  border: 1px solid @color-gray-gray;
   order: 2;
   outline: none;
-
-  &--contacts {
-    margin-left: 8px;
-    padding-right: 36px;
-  }
 
   &:hover {
     border-color: @color-gray;
@@ -53,6 +48,11 @@
   &:focus-visible {
     border-color: @color-gray-dark;
     color: @color-gray-dark;
+  }
+
+  &--contacts {
+    margin-left: 8px;
+    padding-right: 36px;
   }
 
   &--error {
