замена путей для бг-картинок

--- a/src/less/blocks/benefits.less
+++ b/src/less/blocks/benefits.less
@@ -64,22 +64,22 @@
     left: 0;
     width: 60px;
     height: 60px;
-    background-image: url('../../img/nutrition-icon.svg');
+    background-image: url('../img/nutrition-icon.svg');
     background-repeat: no-repeat;
     background-position: center;
     content: '';
   }
 
   &--powder::before {
-    background-image: url('../../img/powder-icon.svg');
+    background-image: url('../img/powder-icon.svg');
   }
 
   &--replacement::before {
-    background-image: url('../../img/replacement-icon.svg');
+    background-image: url('../img/replacement-icon.svg');
   }
 
   &--improvement::before {
-    background-image: url('../../img/improvement-icon.svg');
+    background-image: url('../img/improvement-icon.svg');
   }
 
   @media @tablet {
