--- a/src/less/blocks/content.less
+++ b/src/less/blocks/content.less
@@ -6,7 +6,7 @@
       @color-white 302px,
       @color-white 100%
     ),
-    url('../../img/content-background.png');
+    url('../img/content-background.png');
   background-repeat: no-repeat;
   background-position: top;
 
@@ -23,8 +23,7 @@
         rgba(104, 183, 56, 0.85) 50%,
         rgba(104, 183, 56, 0.85) 100%
       ),
-      url('../../img/content-background-desktop-full.jpg') no-repeat calc(50% + 360px)
-        bottom;
+      url('../img/content-background-desktop-full.jpg') no-repeat calc(50% + 360px) bottom;
   }
 }
 
