--- a/src/less/blocks/cross-sale.less
+++ b/src/less/blocks/cross-sale.less
@@ -47,7 +47,7 @@
 
 .cross-sale__gift {
   position: relative;
-  background-image: url('../../img/gift_photo-mobile.jpg');
+  background-image: url('../img/gift_photo-mobile.jpg');
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -69,7 +69,7 @@
   }
 
   @media @tablet {
-    background-image: url('../../img/gift_photo-tablet.jpg');
+    background-image: url('../img/gift_photo-tablet.jpg');
     flex-direction: row;
     gap: 265px;
     padding: 58px 124px 58px 78px;
@@ -80,7 +80,7 @@
   }
 
   @media @desktop {
-    background-image: url('../../img/gift_photo-desktop.jpg');
+    background-image: url('../img/gift_photo-desktop.jpg');
     flex-direction: column;
     gap: 46px;
     padding: 56px 42px 42px;
