--- a/src/less/blocks/show-more.less
+++ b/src/less/blocks/show-more.less
@@ -23,7 +23,7 @@
     content: '';
     height: 30px;
     width: 30px;
-    background-image: url('../../img/plus-icon.svg');
+    background-image: url('../img/plus-icon.svg');
     background-position: center;
     background-repeat: no-repeat;
     top: 6px;
@@ -50,7 +50,7 @@
   height: 30px;
   width: 30px;
   margin: 0 auto 23px;
-  background-image: url('../../img/icon-show-more-small.svg');
+  background-image: url('../img/icon-show-more-small.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
@@ -59,7 +59,7 @@
     height: 60px;
     width: 60px;
     margin-bottom: 48px;
-    background-image: url('../../img/icon-show-more-big.svg');
+    background-image: url('../img/icon-show-more-big.svg');
   }
 }
 
