--- a/src/less/blocks/socials.less
+++ b/src/less/blocks/socials.less
@@ -28,7 +28,7 @@
   display: block;
   width: 24px;
   height: 24px;
-  background-image: url('../../img/icon_vkontakte.svg');
+  background-image: url('../img/icon_vkontakte.svg');
   background-repeat: no-repeat;
   background-position: center;
 
@@ -39,7 +39,7 @@
   }
 
   &--instagram {
-    background-image: url('../../img/icon_instagram.svg');
+    background-image: url('../img/icon_instagram.svg');
 
     @media @tablet {
       width: 23px;
@@ -48,7 +48,7 @@
   }
 
   &--facebook {
-    background-image: url('../../img/icon_facebook.svg');
+    background-image: url('../img/icon_facebook.svg');
 
     @media @tablet {
       width: 28px;
