--- a/src/less/blocks/map.less
+++ b/src/less/blocks/map.less
@@ -82,16 +82,16 @@
   position: relative;
   min-height: 362px;
   padding: 0;
-  background-image: url('../../img/map-mobile.jpg');
+  background-image: url('../img/map-mobile.jpg');
   background-repeat: no-repeat;
   background-position-x: center;
 
   @media @tablet {
-    background-image: url('../../img/map-tablet.jpg');
+    background-image: url('../img/map-tablet.jpg');
     min-height: 400px;
   }
   @media @desktop {
-    background-image: url('../../img/map-desktop.jpg');
+    background-image: url('../img/map-desktop.jpg');
   }
 }
 
