--- a/src/less/blocks/text-field.less
+++ b/src/less/blocks/text-field.less
@@ -16,11 +16,11 @@
   }
 
   &--email::after {
-    background-image: url('../../img/icon_email.svg');
+    background-image: url('../img/icon_email.svg');
   }
 
   &--phone::after {
-    background-image: url('../../img/icon_phone.svg');
+    background-image: url('../img/icon_phone.svg');
   }
 
   @media @tablet {
